update dependencies (mainly eis 0.7.0)